2014-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (mergeSpec): added check for both static and extern
	  (checkFunction): merge static or extern and check
	* device/include/ctype.h: replaced macros with direct inline versions
	* device/lib/isdigit.c,
	* device/lib/islower.c,
	* device/lib/isupper.c: replaced definitions with extern declaration to give
	  inline versions external linkage

2014-09-22 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/_modsint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _modsint.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-19 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/_divsint_stm8.s:
	* device/lib/stm8/_mulint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of div / mul.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed double read from __sfr function parameter.

2014-09-17 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic14-header-parser.pl:
	  Creates two new groups: "regular", "enhanced"

	* support/scripts/pic16fam-h-gen.pl:
	  Divides into more groups the 14-bit processors:
		"adc", "ccp", "pwm", "i2c", "spi", "usart"

2014-09-17 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl:
	  updated

2014-09-15 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/*.inc,
	  device/non-free/lib/pic14/libdev/*.c:
	  updated

2014-09-13 Ben Shi <powerstudio1st AT 163.com>

	* src/stm8/main.c:
	  Make libstm8.lib is implicitly linked rather than explicitly designated.

2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl,
	  support/scripts/optimize_pic16devices.pl:
	  Updated unto the Perl 5.16 version.
